[project]
name = "virt-framework"
version = "0.1.0"
authors = [
    { name="Bryn M. Reeves", email="bmr@redhat.com" },
    { name="Todd Gill", email="tgill@redhat.com" },
]
description = "VM-based end-to-end testing framework for Snapshot Manager"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/snapshotmanager/snapm"
"Source" = "https://github.com/snapshotmanager/snapm"

[project.scripts]
virt-framework = "virt_tests.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
